# diagrams-mcp-server

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  NOTICE  README.md  README.zh-CN.md  docker-healthcheck.sh  pyproject.toml  skills-lock.json
.github/workflows/: ci.yml  docs.yml  publish.yml
docs-site/: index.md  package-lock.json  package.json
docs-site/.vitepress/: config.ts
docs-site/.vitepress/theme/: custom.css
docs-site/guide/: examples.md  getting-started.md  installation.md
microsoft/: __init__.py
microsoft/azure_diagram_mcp_server/: __init__.py  bicep_tools.py  copilot_client.py  diagram_tools.py  models.py  scanner.py  server.py
microsoft/azure_diagram_mcp_server/viewer/: app.html
tests/: __init__.py  conftest.py  test_bicep_tools.py  test_copilot_client.py  test_diagram_tools.py  test_models.py  test_scanner.py  test_server.py
tests/resources/: __init__.py
tests/resources/example_diagrams/: __init__.py  azure_example.py  flow_example.py  sequence_example.py
